Expose a POST endpoint to schedule tasks.